--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.28",
-    "uuidv4": "^6.2.4"
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4",
+    "v4": "^0.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
