add: salvando tokens no banco de dados

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,10 +6,10 @@
   "password": "12345",
   "database": "gostack_gobarber",
   "entities": [
-    "./src/modules/**/infra/typeorm/entities/*ts"
+    "./src/modules/**/infra/typeorm/entities/*.ts"
   ],
   "migrations": [
-    "./src/shared/infra/typeorm/migrations/*ts"
+    "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations/"
