--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
+# Application
 APP_SECRET=
-APP_API_URL=http://localhost:3333
+APP_API_URL=http://192.168.100.3:3333
 APP_WEB_URL=http://localhost:3000
-
 EXPIRESIN=1d
 
-MAIL_DRIVER=
+# EMail
+MAIL_DRIVER=ethereal
 
+# Credential AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
+
+#STORAGE
+STORAGE_DRIVER=disk
+
+#Redis
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASS=
